8200719: Cannot connect to IPv6 host when exists any active network interface without IPv6 address

Reviewed-by: clanger, chegar